# cowbird

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml
examples/: test.yaml
src/: cli.rs  cmd.rs  lib.rs  log.rs  main.rs  util.rs
src/file/: mod.rs  tests.rs
src/network/: mod.rs  tests.rs  util.rs
src/process/: mod.rs  tests.rs
src/util/: mod.rs  tests.rs
tests/: example_script.rs
