[package]
name = "cowbird"
version = "0.1.0"
edition = "2021"
description = "EDR tool"
repository = "https://github.com/erikwilson/cowbird"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
slog = "~2.5"
slog-json = "~2.5"
lazy_static = "~1.4"
