[package]
name = "cowbird"
version = "0.1.1"
edition = "2021"
description = "EDR tool"
repository = "https://github.com/erikwilson/cowbird"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
slog = "~2.5"
slog-json = "~2.5"
slog-envlogger = "~2.2"
lazy_static = "~1.4"
hex = "~0.4"
substring = "~1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "~0.8"
serde_json = "~1.0"
yaml-split = "~0.3"
whoami = "~1.2"
chrono = "~0.4"
positioned-io = "~0.2"
tempfile = "3"

[target.'cfg(target_family = "unix")'.dependencies]
stdio-override = "~0.1"
